adding first fix html template

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,21 +14,26 @@
     <img id="logo" src="img/logo-FABL-horz_07.png">
 <nav class="">
 <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">RubyRoute</a></li>
-    <li><a href="">Products</a></li>
-    <li><a href="">About</a></li>
-    <li><a href="">Contact</a></li>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">RubyRoute</a></li>
+    <li><a href="#">Products</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
 </ul>>
 </nav>
 </header>
-<div></div>
+<div>
+    <ul></ul>
+</div>
 <footer class="">
-    <li><a href=""><img src="img/fb.png"></a></li>
-    <li><a href=""><img src="img/tw.png"></a></li>
-    <li><a href=""><img src="img/ig.png"></a></li>
-    <li><a href=""><img src="img/gm.png"></a></li>
-    <li><a href=""><img src="img/lk.png"></a></li>
+<ul>
+    <li><a href="#"><img src="img/fb.png"></a></li>
+    <li><a href="#"><img src="img/tw.png"></a></li>
+    <li><a href="#"><img src="img/ig.png"></a></li>
+    <li><a href="#"><img src="img/gm.png"></a></li>
+    <li><a href="#"><img src="img/lk.png"></a></li>
+</ul>
+<div id="copyright"></div>
 </footer>
 </body>
 </html>
