--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@
 
 body {
     max-width: 1920px;
-    width: 100%;
     background: #333132;  
     font-family: "Sansita", sans-serif;
     color: #E5F5F9;
@@ -13,9 +12,6 @@ body {
 /* LP added this to all divs so that the top and bottom would have space
 *  You can override this by using child css selectors.
 */
-div {
-    padding: 10px 0;
-}
 
 .clearfix {
     clear: both;
@@ -24,7 +20,7 @@ div {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "Asar", serif;
-    color: #BE1E2D;
+    color: rgb(229,245,249);
 }
 
 h1 {
@@ -70,22 +66,20 @@ img {
 header {
     padding: 10px 20px;
     height: 50px;
-    width: 100%;
     color: #333132;
-    background-color: rgba(229,245,249,.75)
+    background-color: #ABEBFF;
 }
 
 #logo {
-    margin: 10px;
-    max-height: 90%;
-    float: left;
+    max-height: 100%;
 }
 
 /* Navigation */
 
 nav {
     float: right;
-    max-width: 60%;
+    padding: 16px 0px 16px 16px;
+    text-align: center;
 }
 
 nav ul {
@@ -94,7 +88,7 @@ nav ul {
 
 nav ul li {
     list-style: none;
-    margin: .5em, .25em, .5em, .25em;
+    margin: 0 .25em;
     padding: 0;
     display: inline-block;
     /* position: fixed;
@@ -112,17 +106,20 @@ nav ul li:first-child {
 
 nav li a {
     text-decoration: none;
-    background: #333132;
-    color: #BE1E2D;
-    padding: 5px 15px;
-    width: 100%;
+    background: linear-gradient(90deg,,);
+    color: rgb(229,245,249);
+    padding: 15px 15px;
     border-radius: 5px;
     text-align: center;
+    font-weight: bold;
 }
 
 nav li a:hover {
-    background-color: #333132;
-    color: rgb(229,245,249)
+    background-color: rgb(253,36,92)
+}
+
+a:hover {
+    box-shadow: 0 2.5px 5px 0 rgba(32,32,32,.65);
 }
 
 /* Body */
@@ -139,24 +136,112 @@ div.container {
     padding-top: 0;
 }
 
+.thrubyHeader {
+    padding: 10px 20px;
+    height: 50px;
+    background-image: url("../images/hero.png");
+    background-position-y: -630px;
+    background-position-x: center;
+    box-shadow: 0 5px 5px 0 rgba(32,32,32,.65), inset 0 0 0 2000px rgba(1, 217, 255, 0.45);
+    z-index: 100;
+}
+
 .landing section {
-    width: 100%;
     height: max-content;
     display: block;
-    padding: 10px 80px 80px;
+    padding: 10px 80px;
+
+}
+
+section#hero h1 {
+    color: #ABEBFF;
+}
+
+section#hero h2 {
+    color: #ABEBFF;
+}
+
+section#hero p {
+    color: #ABEBFF;
 }
 
 section#hero {
     background-image: url("../images/hero.png");
     padding-top: 200px ;
-    padding-bottom: 200px ;
+    padding-bottom: 100px ;
     background-position-y: -700px;
+    background-position-x: center;
     position: relative;
+    box-shadow:  0 5px 5px 0 rgba(32,32,32,.65);
 }
 
 #hero .hand {
     position: absolute;
     bottom: 0;
+}
+
+.download1 {
+    background-color: rgba(1, 217, 255, 0.45);
+    border: none;
+    color: rgb(229,245,249);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 8px;
+    margin: 2.5em 0;
+    font-weight: bold;
+}
+
+.download1:hover {
+    background-color: rgb(68,226,240);
+    color: rgb(229,245,249);
+    box-shadow: 0 5px 5px 0 rgba(32,32,32,.65);
+}
+
+.download {
+    background-color:rgba(190,30,45,.75);
+    border: none;
+    color: rgb(229,245,249);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 8px;
+    margin: 2.5em 0;
+    font-weight: bold;
+}
+
+.download:hover {
+    background-color: rgb(253,36,92);
+    color: #ABEBFF;
+    box-shadow: 0 5px 5px 0 rgba(32,32,32,.65);
+}
+
+section#functions {
+    box-shadow:  0 5px 5px 0 rgba(32,32,32,.65);
+}
+
+section#reviews {
+    background-color:#ABEBFF;
+    color: #333132;
+    box-shadow:  0 5px 5px 0 rgba(32,32,32,.65);
+}
+
+section#reviews h1, section#reviews h2 {
+    color: #333132;
+}
+
+.stars {
+    float: right;
+    margin: 5em 10em;
+}
+
+.stars h1 {
+    padding: 1em 0;
+    margin: 0;
 }
 
 .landing article {
@@ -174,25 +259,46 @@ section#hero {
     padding-right: 50px;
 }
 
+.bottomNavDiv {
+    background-image: url("../images/hero.png");
+    background-position-y: 200px;
+    background-position-x: center;
+}
+
+.bottomNav {
+    float: none;
+    font-weight: bold;
+    margin-left: auto;
+    padding: 32px;
+}
+
+.bottomNav a:hover {
+    box-shadow: 0 5px 5px 0 rgba(32,32,32,.65);
+}
+
 /* Footer */
 
 footer {
     display: block;
-    height: 50px;
-    width: 100%;
+    height: 25px;
     padding: 10px 20px;
     color: #333132;
     background-color: rgba(229,245,249,.75);
 }
 
 #copyright { 
-    float: left;
     max-height: 100%;
+    font-weight: bold;
+    display: inline-block;
+    text-align: center;
 }
 
 footer ul {
     float: right;
-
+    z-index: 10;
+    position: absolute;
+    bottom: 5px;
+    right: 1%;
 }
 
 footer ul li {
@@ -213,3 +319,28 @@ footer li a img {
 footer li a img:hover {
     color: rgba(229, 245, 249, .45);
 }
+
+.thrubyFooter {
+    background-image: url(../images/hero.png);
+    background-position-x: center;
+    background-position-y: bottom;
+    color: rgb(229,245,249);
+    text-align: center;
+    display: block;
+    height: 50px;
+    box-shadow:inset 0 0 0 2000px rgba(1, 217, 255, 0.45);
+    position: relative;
+}
+
+#thrubyCopy { 
+    max-height: 100%;
+    font-weight: bold;
+    display: inline-block;
+    text-align: center;
+    padding: 15px 0;
+}
+
+.socialIcons a {
+    border-radius: 50%;
+}
+    
