added sections in css

--- a/css/styles-about.css
+++ b/css/styles-about.css
@@ -15,3 +15,24 @@ section.title {
 section.title h1 {
 
 }
+
+section.about {
+
+}
+
+section.about img {
+
+}
+
+section.about article {
+
+}
+
+section.about h2 {
+
+}
+
+section.about p {
+
+}
+
