finished home hero section

--- a/css/styles-home.css
+++ b/css/styles-home.css
@@ -12,14 +12,14 @@
 
 }
 
-#home section#hero article {
+/* #home section#hero article {
     display: inline-block;
     width: 50%;
 }
 
 #home section#hero img {
     display: inline-block;
-}
+} */
 
 
 
