--- a/css/styles-home.css
+++ b/css/styles-home.css
@@ -15,3 +15,19 @@ div.featured h3 {
     color: #333132;
     font-family: 'Arvo', serif;
 }
+
+div.featured img {
+    max-width: 200px;
+}
+
+/** Contact Section **/
+
+section#contact {
+    background-color:#ABEBFF;
+    color: #333132;
+    box-shadow:  0 5px 5px 0 rgba(32,32,32,.65);
+}
+
+section#contact h1, section#contact h2 {
+    color: #333132;
+}
