--- a/css/styles-about.css
+++ b/css/styles-about.css
@@ -1,13 +1,3 @@
-.left {
-    float: left;
-    width: 50%
-}
-
-.right {
-    float: right;
-    width: 50%;
-}
-
 section.title {
 
 }
@@ -16,8 +6,21 @@ section.title h1 {
 
 }
 
-section.about {
+section#company {
+    background-image: url("/images/hero.png");
+}
 
+section#company div#desc {
+    padding: 20px;
+    background-color: rgba(51, 49, 50, 0.637);
+    border-radius: 10px;
+    margin-bottom: 100px;
+    width: 80%;
+}
+
+section#company img {
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 section.team {
@@ -40,5 +43,10 @@ section.team img {
     margin-right: 25px;
     border-radius: 50%;
     background-color: white;
+    margin-left: 50px;
+}
+
+section.team:last-child {
+    padding-bottom: 100px;
 }
 
