--- a/css/styles-about.css
+++ b/css/styles-about.css
@@ -7,7 +7,7 @@ section.title h1 {
 }
 
 section#company {
-    background-image: url("/images/hero.png");
+    background-image: url("/images/hero2.png");
 }
 
 section#company div#desc {
