changed contact styles

--- a/css/styles-about.css
+++ b/css/styles-about.css
@@ -34,7 +34,16 @@ section#company {
 
 section#company div#desc {
     padding: 20px;
-    background-color: rgba(255, 1, 77, 0.4);
+    background-color: rgba(171,235,255,0.4);
+    border-radius: 10px;
+    margin-bottom: 100px;
+    width: 80%;
+    box-shadow:  0 5px 5px 0 rgba(32,32,32,.65);
+}
+
+section#company div#contactDiv {
+    padding: 20px;
+    background-color: rgba(255, 0, 85, 0.4);
     border-radius: 10px;
     margin-bottom: 100px;
     width: 80%;
